--- a/templates/view_forum_posts.html
+++ b/templates/view_forum_posts.html
@@ -1,7 +1,7 @@
 {% extends '_layout.html' %}
 {% block body %}
 <div class="container pt-4">
-    <h1>Simple Forum</h1>
+    <h1>CourseElector Forum</h1>
     <a href="{{ url_for('create_forum_post') }}" class="btn btn-primary">Create Post</a>
     <table class="table">
         <thread>
