--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -15,6 +15,7 @@
 
 h2{
     color: white;
+    font-size: large;
     text-align: left;
     padding: 30px 0px 0px 40px;
 }
@@ -24,7 +25,7 @@ h2{
     position: relative;
     width: 100%;
     height: 100%;
-    background: #f1f1f1;
+    background: white;
 }
 
 .header .side-nav{
@@ -101,6 +102,26 @@ hr{
     background: #70798c;
     color: black;
     border-bottom: 1px solid black;
+    padding: 30px 20px;
+}
+
+.profile-container{
+    display: flex;
+    align-items: center;
+}
+
+.text-info{
+    color: black;
+    margin-left: 30px;
+}
+
+.text-info p{
+    padding-left: 40px;
+}
+
+.text-info p, h2{
+    color: black;
+    margin-left: 30px;
 }
 
 .profile-form{
@@ -110,7 +131,13 @@ hr{
 }
 
 .icon{
-    height: 150px;
+    height: 130px;
+    background-color: #D9D9D9;
+    border-radius: 50%;
+}
+
+.btn btn-primary{
+    background-color: #86A873;
 }
 
 @media only screen and (max-width:600px){
