--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -27,19 +27,36 @@
         <div class="main_content">
             <div class="profile-container">
                 <img src="{{ url_for('static', filename='images/icon.png') }}" class="icon"alt="Profile Icon">
-                <h2>Demo Emma</h2>
-                <p>Email: demoemma@gmail.com
+                <div class="text-info">
+                  <h2>Demo Emma</h2>
+                  <p>Email: demoemma@gmail.com</p>
+                </div>
             </div>
-
             <div class="profile-form">
                 <form class="row g-3">
-                    <div class="col-md-6">
-                      <label for="inputEmail4" class="form-label">Email</label>
-                      <input type="email" class="form-control" id="inputEmail4">
+                    <div class="col-md-4">
+                      <label for="username" class="form-label">Username</label>
+                      <input type="username" class="form-control" id="username">
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                       <label for="inputPassword4" class="form-label">Password</label>
                       <input type="password" class="form-control" id="inputPassword4">
+                    </div>
+                    <div class="col-md-4">
+                      <label for="newPassword" class="form-label">New Password</label>
+                      <input type="password" class="form-control" id="newPassword">
+                    </div>
+                    <div class="col-md-4">
+                      <label for="fname" class="form-label">First Name</label>
+                      <input type="text" class="form-control" placeholder="First name" aria-label="First name" id="fname"> 
+                    </div>
+                    <div class="col-md-4">
+                      <label for="lname" class="form-label">Last Name</label>
+                      <input type="text" class="form-control" placeholder="Last name" aria-label="Last name" id="lname">
+                    </div>
+                    <div class="col-md-4">
+                      <label for="phone" class="form-label">Phone Number</label>
+                      <input type="text" class="form-control" placeholder="(+1 123 456 7890)" aria-label="Phone Number" id="phone">
                     </div>
                     <div class="col-12">
                       <label for="inputAddress" class="form-label">Address</label>
@@ -65,21 +82,14 @@
                       <input type="text" class="form-control" id="inputZip">
                     </div>
                     <div class="col-12">
-                      <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="gridCheck">
-                        <label class="form-check-label" for="gridCheck">
-                          Check me out
-                        </label>
-                      </div>
-                    </div>
-                    <div class="col-12">
-                      <button type="submit" class="btn btn-primary">Sign in</button>
+                      <button type="submit" class="btn btn-secondary">Edit</button>
                     </div>
                 </form>
                 
             </div>
         </div>   
     </div>
-</body>
-</html>
+  </body>
+  </html>
+
 
