--- a/templates/edit_forum_comment.html
+++ b/templates/edit_forum_comment.html
@@ -3,13 +3,13 @@
 {% block body %}
 <div class="container pt-4">
     <h1>Edit Comment</h1>
-    <form method="post">
+    <form method="post" action="{{ url_for('edit_forum_comment', post_id=post_id, comment_id=comment.comment_id) }}">
         <div class="form-group">
-            <label for="comment">Comment</label>
-            <textarea id="comment" name="comment" class="form-control" rows="4">{{ comment }}</textarea>
+        <label for="body">Comment:</label>
+        <textarea class="form-control" id="body" name="body" rows="5" required>{{ comment.body }}</textarea>
         </div>
+        <br>
         <button type="submit" class="btn btn-primary">Save Changes</button>
     </form>
-    <a href="{{ url_for('view_single_forum_post', post_id=post_id) }}" class="btn btn-secondary mt-2">Cancel</a>
 </div>
 {% endblock %}
