--- a/templates/view_forum_posts.html
+++ b/templates/view_forum_posts.html
@@ -14,11 +14,11 @@
         <tbody>
             {% for post in posts %}
             <tr>
-                <td><a href="{{ url_for('view_single_forum_post', post_id=loop.index0) }}">{{ post.title }}</a></td>
+                <td><a href="{{ url_for('view_single_forum_post', post_id=post.post_id) }}">{{ post.subject }}</a></td>
 
-                <td>{{ post.code }}</td>
+                <td>{{ post.course.course_letter }}-{{ post.course.course_number }}</td>
                 
-                <td><a href="{{ url_for('delete_post', post_id=loop.index0) }}" class="btn btn-danger btn-sm">Delete</a></td>
+                <td><a href="{{ url_for('delete_post', post_id=post.post_id) }}" class="btn btn-danger btn-sm float-right">Delete</a></td>
 
             </tr>
             {% endfor %}
