--- a/templates/view_single_forum_post.html
+++ b/templates/view_single_forum_post.html
@@ -1,34 +1,31 @@
 {% extends '_layout.html' %}
 {% block body %}
 <div class = "container pt-4">
-    <h1>{{ post.code}}: {{ post.title }}</h1>
-    <p>{{ post.content }}</p>
-    <a href="{{ url_for('edit_forum_post', post_id=post_id) }}" class="btn btn-primary">Edit Post</a>
-    <hr>
+    <h1>{{ post.subject }}</h1>
+    <p>{{ post.body }}</p>
+    <a href="{{ url_for('edit_forum_post', post_id=post.post_id) }}" class="btn btn-primary">Edit Post</a>
+    
     <h2>Comments</h2>
-    <ul class="list-group">
-        {% for comment in comments %}
-            <li class="list-group-item">
-                {{ comment }}
-                <form method="post" action="{{ url_for('delete_comment', post_id=post_id, comment_id=loop.index0) }}">
-                    <button type="submit" class="btn btn-danger btn-sm float-right">Delete</button>
-                </form>
-                <a href="{{ url_for('edit_forum_comment', post_id=post_id, comment_id=loop.index0) }}" class="btn btn-primary btn-sm float-right mr-2">Edit</a>
-            </li>
+    <ul class="list-group mt-3">
+        {% for comment in post.comments %}
+        <li class="list-group-item">
+            {{ comment.body }}
+            <form method="post" action="{{ url_for('delete_comment', post_id=post.post_id, comment_id=comment.comment_id) }}">
+            <button type="submit" class="btn btn-danger btn-sm float-right">Delete</button>
+            </form>
+            <a href="{{ url_for('edit_forum_comment', post_id=post.post_id, comment_id=comment.comment_id) }}" class="btn btn-primary btn-sm float-right mr-2">Edit</a>
+        </li>
         {% endfor %}
-
     </ul>
-    <form method="post">
-        <div class="form-group mt-3">
-            <label for="comment">Add a Comment</label>
-            <textarea id="comment" name="comment" class="form-control" rows="3" required></textarea>
+    <form method="post" action="{{ url_for('create_forum_comment', post_id=post.post_id) }}">
+        <div class="form-group">
+          <label for="comment-body">Add a Comment:</label>
+          <textarea class="form-control" id="comment-body" name="body" rows="3" required></textarea>
         </div>
-        <button type="submit" class="btn btn-primary mt-2">Submit Comment</button>
-    </form>
+        <br>
+        <button type="submit" class="btn btn-primary">Add Comment</button>
+      </form>
     <a href="{{ url_for('view_forum_posts') }}" class="btn btn-secondary mt-2">Back to Forum Home</a>
-    <br>
-    <br>
-    <br>
 </div>
     
 {% endblock %}
